--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,20 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: CSA/package-lock.json
 
       - name: Install dependencies
+        working-directory: CSA
         run: npm ci
 
       - name: Build
+        working-directory: CSA
         run: npm run build
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: CSA/dist
 
   deploy:
     needs: build
